--- a/egg/index.html
+++ b/egg/index.html
@@ -46,7 +46,7 @@
     <br/>
     <p class="instructions">Version 1.0.3 – Created by <a href="http://twitter.com/satanas82">Wil Alvarez</a></p>
     <p class="instructions">
-      <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />
+      <img alt="Creative Commons License" style="border-width:0" src="https://licensebuttons.net/l/by-nc-sa/4.0/88x31.png" />
     </p>
   </div>
 </body>
