--- a/formations.html
+++ b/formations.html
@@ -19,14 +19,6 @@ push-date:
       badge-up: "18 <span>et</span> 19"
       badge-down: "Février<br/>2020"
 
-    - link: "/formations/Formation-Terraform.html"
-      img: "/images/formations/terraform.png"
-      title: "Terraform"
-      fulltitle: "Formation Terraform : 20 et 21 février 2020 Paris"
-      short: "Formation Terraform 2 jours"
-      badge-up: "20 <span>et</span> 21"
-      badge-down: "Février<br/>2020"
-
     - link: "/formations/Formation-Ansible.html"
       img: "/images/formations/ansible.png"
       title: "Ansible"
@@ -51,6 +43,13 @@ push-date:
       badge-up: "9 <span>et</span> 10"
       badge-down: "Avril<br/>2020"
 
+    - link: "/formations/Formation-Terraform.html"
+      img: "/images/formations/terraform.png"
+      title: "Terraform"
+      fulltitle: "Formation Terraform : 23 et 24 avril 2020 Paris"
+      short: "Formation Terraform 2 jours"
+      badge-up: "23 <span>et</span> 24"
+      badge-down: "Avril<br/>2020"
 
 
 ---
