--- a/formations.html
+++ b/formations.html
@@ -11,14 +11,6 @@ push-date:
       badge-up: "11 <span>au</span> 13"
       badge-down: "Février<br/>2020"
 
-    - link: "/formations/Formation-XL-Release.html"
-      img: "/images/formations/xl-release.png"
-      title: "XL Release"
-      fulltitle: "Formation XL Release : 18 et 19 février 2020 Paris"
-      short: "Formation XL Release 2 jours"
-      badge-up: "18 <span>et</span> 19"
-      badge-down: "Février<br/>2020"
-
     - link: "/formations/Formation-Ansible.html"
       img: "/images/formations/ansible.png"
       title: "Ansible"
@@ -41,6 +33,14 @@ push-date:
       fulltitle: "Formation Kubernetes : 9 et 10 avril 2020 Paris"
       short: "Formation Kubernetes avancée 2 jours"
       badge-up: "9 <span>et</span> 10"
+      badge-down: "Avril<br/>2020"
+
+    - link: "/formations/Formation-XL-Release.html"
+      img: "/images/formations/xl-release.png"
+      title: "XL Release"
+      fulltitle: "Formation XL Release : 21 et 22 avril 2020 Paris"
+      short: "Formation XL Release 2 jours"
+      badge-up: "21 <span>et</span> 22"
       badge-down: "Avril<br/>2020"
 
     - link: "/formations/Formation-Terraform.html"
