--- a/formations.html
+++ b/formations.html
@@ -3,22 +3,6 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Formation-XL-Deploy.html"
-      img: "/images/formations/xl-deploy.png"
-      title: "XL Deploy"
-      fulltitle: "Formation XL Deploy : 14 au 16 avril 2020 Paris"
-      short: "Formation XL Deploy 3 jours"
-      badge-up: "14 <span>au</span> 16"
-      badge-down: "Avril<br/>2020"
-
-    - link: "/formations/Formation-XL-Release.html"
-      img: "/images/formations/xl-release.png"
-      title: "XL Release"
-      fulltitle: "Formation XL Release : 21 et 22 avril 2020 Paris"
-      short: "Formation XL Release 2 jours"
-      badge-up: "21 <span>et</span> 22"
-      badge-down: "Avril<br/>2020"
-
     - link: "/formations/Formation-Terraform.html"
       img: "/images/formations/terraform.png"
       title: "Terraform"
@@ -34,6 +18,22 @@ push-date:
       short: "Formation Ansible 2 jours"
       badge-up: "28 <span>et</span> 29"
       badge-down: "Mai<br/>2020"
+
+    - link: "/formations/Formation-XL-Deploy.html"
+      img: "/images/formations/xl-deploy.png"
+      title: "XL Deploy"
+      fulltitle: "Formation XL Deploy : 9 au 11 juin 2020 Paris"
+      short: "Formation XL Deploy 3 jours"
+      badge-up: "9 <span>au</span> 11"
+      badge-down: "Juin<br/>2020"
+
+    - link: "/formations/Formation-XL-Release.html"
+      img: "/images/formations/xl-release.png"
+      title: "XL Release"
+      fulltitle: "Formation XL Release : 16 et 17 juin 2020 Paris"
+      short: "Formation XL Release 2 jours"
+      badge-up: "16 <span>et</span> 17"
+      badge-down: "Juin<br/>2020"
 
     - link: "/formations/Formation-Kubernetes.html"
       img: "/images/formations/Kubernetes.png"
