--- a/formations.html
+++ b/formations.html
@@ -3,14 +3,6 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Formation-Terraform.html"
-      img: "/images/formations/terraform.png"
-      title: "Terraform"
-      fulltitle: "Formation Terraform : 23 et 24 avril 2020 Paris"
-      short: "Formation Terraform 2 jours"
-      badge-up: "23 <span>et</span> 24"
-      badge-down: "Avril<br/>2020"
-
     - link: "/formations/Formation-Ansible.html"
       img: "/images/formations/ansible.png"
       title: "Ansible"
@@ -33,6 +25,14 @@ push-date:
       fulltitle: "Formation XL Release : 16 et 17 juin 2020 Paris"
       short: "Formation XL Release 2 jours"
       badge-up: "16 <span>et</span> 17"
+      badge-down: "Juin<br/>2020"
+
+    - link: "/formations/Formation-Terraform.html"
+      img: "/images/formations/terraform.png"
+      title: "Terraform"
+      fulltitle: "Formation Terraform : 18 et 19 juin 2020 Paris"
+      short: "Formation Terraform 2 jours"
+      badge-up: "18 <span>et</span> 19"
       badge-down: "Juin<br/>2020"
 
     - link: "/formations/Formation-Kubernetes.html"
