--- a/formations.html
+++ b/formations.html
@@ -3,38 +3,6 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Formation-Ansible.html"
-      img: "/images/formations/ansible.png"
-      title: "Ansible"
-      fulltitle: "Formation Ansible : 28 et 29 mai 2020 Paris"
-      short: "Formation Ansible 2 jours"
-      badge-up: "28 <span>et</span> 29"
-      badge-down: "Mai<br/>2020"
-
-    - link: "/formations/Formation-XL-Deploy.html"
-      img: "/images/formations/xl-deploy.png"
-      title: "XL Deploy"
-      fulltitle: "Formation XL Deploy : 9 au 11 juin 2020 Paris"
-      short: "Formation XL Deploy 3 jours"
-      badge-up: "9 <span>au</span> 11"
-      badge-down: "Juin<br/>2020"
-
-    - link: "/formations/Formation-XL-Release.html"
-      img: "/images/formations/xl-release.png"
-      title: "XL Release"
-      fulltitle: "Formation XL Release : 16 et 17 juin 2020 Paris"
-      short: "Formation XL Release 2 jours"
-      badge-up: "16 <span>et</span> 17"
-      badge-down: "Juin<br/>2020"
-
-    - link: "/formations/Formation-Terraform.html"
-      img: "/images/formations/terraform.png"
-      title: "Terraform"
-      fulltitle: "Formation Terraform : 18 et 19 juin 2020 Paris"
-      short: "Formation Terraform 2 jours"
-      badge-up: "18 <span>et</span> 19"
-      badge-down: "Juin<br/>2020"
-
     - link: "/formations/Formation-Kubernetes.html"
       img: "/images/formations/kubernetes.png"
       title: "Kubernetes"
@@ -42,6 +10,14 @@ push-date:
       short: "Formation Kubernetes 2 jours"
       badge-up: "9 <span>et</span> 10"
       badge-down: "Juillet<br/>2020"
+
+    - link: "/formations/Formation-Ansible.html"
+      img: "/images/formations/ansible.png"
+      title: "Ansible"
+      fulltitle: "Formation Ansible : 23 et 24 juillet 2020 Paris"
+      short: "Formation Ansible 2 jours"
+      badge-up: "23 <span>et</span> 24"
+      badge-down: "juillet<br/>2020"
 
     - link: "/formations/Formation-Git-pour-les-Ops.html"
       img: "/images/formations/git-pour-les-ops.png"
@@ -51,6 +27,29 @@ push-date:
       badge-up: "31"
       badge-down: "Juillet<br/>2020"
 
+    - link: "/formations/Formation-Terraform.html"
+      img: "/images/formations/terraform.png"
+      title: "Terraform"
+      fulltitle: "Formation Terraform : 27 et 28 août 2020 Paris"
+      short: "Formation Terraform 2 jours"
+      badge-up: "27 <span>et</span> 28"
+      badge-down: "Août<br/>2020"
+
+    - link: "/formations/Formation-XL-Deploy.html"
+      img: "/images/formations/xl-deploy.png"
+      title: "XL Deploy"
+      fulltitle: "Formation XL Deploy : 9 au 11 septembre 2020 Paris"
+      short: "Formation XL Deploy 3 jours"
+      badge-up: "9 <span>au</span> 11"
+      badge-down: "Septembre<br/>2020"
+
+    - link: "/formations/Formation-XL-Release.html"
+      img: "/images/formations/xl-release.png"
+      title: "XL Release"
+      fulltitle: "Formation XL Release : 15 et 15 septembre 2020 Paris"
+      short: "Formation XL Release 2 jours"
+      badge-up: "15 <span>et</span> 16"
+      badge-down: "Septembre<br/>2020"
 
 ---
 
