--- a/formations.html
+++ b/formations.html
@@ -3,53 +3,53 @@ layout: default
 title: Formations - Wescale - Improve Together
 class: formations
 push-date:
-    - link: "/formations/Formation-Kubernetes.html"
-      img: "/images/formations/kubernetes.png"
-      title: "Kubernetes"
-      fulltitle: "Formation Kubernetes : 9 et 10 juillet 2020 Paris"
-      short: "Formation Kubernetes 2 jours"
+    - link: "/formations/Formation-Terraform.html"
+      img: "/images/formations/terraform.png"
+      title: "Terraform"
+      fulltitle: "Formation Terraform : 9 et 10 Octobre 2020 Paris"
+      short: "Formation Terraform 2 jours"
       badge-up: "9 <span>et</span> 10"
-      badge-down: "Juillet<br/>2020"
-
-    - link: "/formations/Formation-Ansible.html"
-      img: "/images/formations/ansible.png"
-      title: "Ansible"
-      fulltitle: "Formation Ansible : 23 et 24 juillet 2020 Paris"
-      short: "Formation Ansible 2 jours"
-      badge-up: "23 <span>et</span> 24"
-      badge-down: "juillet<br/>2020"
+      badge-down: "Octobre<br/>2020"
 
     - link: "/formations/Formation-Git-pour-les-Ops.html"
       img: "/images/formations/git-pour-les-ops.png"
       title: "Git pour les Ops"
-      fulltitle: "Formation Git pour les Ops : 31 Juillet 2020 Paris"
+      fulltitle: "Formation Git pour les Ops : 30 Octobre 2020 Paris"
       short: "Formation Git pour les Ops 1 jour"
-      badge-up: "31"
-      badge-down: "Juillet<br/>2020"
+      badge-up: "30"
+      badge-down: "Octobre<br/>2020"
 
-    - link: "/formations/Formation-Terraform.html"
-      img: "/images/formations/terraform.png"
-      title: "Terraform"
-      fulltitle: "Formation Terraform : 27 et 28 août 2020 Paris"
-      short: "Formation Terraform 2 jours"
-      badge-up: "27 <span>et</span> 28"
-      badge-down: "Août<br/>2020"
+    - link: "/formations/Formation-Docker-Kubernetes.html"
+      img: "/images/formations/docker-kubernetes.png"
+      title: "Docker Kubernetes"
+      fulltitle: "Formation Docker Kubernetes : 4 au 6 Novembre 2020 Paris"
+      short: "Formation Docker Kubernetes 3 jours"
+      badge-up: "4 <span>et</span> 6"
+      badge-down: "Novembre<br/>2020"
 
     - link: "/formations/Formation-XL-Deploy.html"
       img: "/images/formations/xl-deploy.png"
       title: "XL Deploy"
-      fulltitle: "Formation XL Deploy : 9 au 11 septembre 2020 Paris"
+      fulltitle: "Formation XL Deploy : 16 au 18 Novembre 2020 Paris"
       short: "Formation XL Deploy 3 jours"
-      badge-up: "9 <span>au</span> 11"
-      badge-down: "Septembre<br/>2020"
+      badge-up: "16 <span>au</span> 18"
+      badge-down: "Novembre<br/>2020"
 
     - link: "/formations/Formation-XL-Release.html"
       img: "/images/formations/xl-release.png"
       title: "XL Release"
-      fulltitle: "Formation XL Release : 15 et 15 septembre 2020 Paris"
+      fulltitle: "Formation XL Release : 24 et 25 Novembre 2020 Paris"
       short: "Formation XL Release 2 jours"
-      badge-up: "15 <span>et</span> 16"
-      badge-down: "Septembre<br/>2020"
+      badge-up: "24 <span>et</span> 25"
+      badge-down: "Novembre<br/>2020"
+
+    - link: "/formations/Formation-Kubernetes-avancee.html"
+      img: "/images/formations/Kubernetes-avancee-blue.png"
+      title: "Formation Kubernetes avancée"
+      fulltitle: "Formation Ansible : 26 et 27 Novembre 2020 Paris"
+      short: "Formation Kubernetes avancée 2 jours"
+      badge-up: "26 <span>et</span> 27"
+      badge-down: "Novembre<br/>2020"
 
 ---
 
