--- a/formations.html
+++ b/formations.html
@@ -11,6 +11,14 @@ push-date:
       badge-up: "9 <span>et</span> 10"
       badge-down: "Octobre<br/>2020"
 
+    - link: "/formations/Formation-Kubernetes.html"
+      img: "/images/formations/Kubernetes.png"
+      title: "Formation Kubernetes"
+      fulltitle: "Formation Kubernetes : 22 et 23 Octobre 2020 Paris"
+      short: "Formation Kubernetes avancée 2 jours"
+      badge-up: "22 <span>et</span> 23"
+      badge-down: "Octobre<br/>2020"
+
     - link: "/formations/Formation-Git-pour-les-Ops.html"
       img: "/images/formations/git-pour-les-ops.png"
       title: "Git pour les Ops"
@@ -41,14 +49,6 @@ push-date:
       fulltitle: "Formation XL Release : 24 et 25 Novembre 2020 Paris"
       short: "Formation XL Release 2 jours"
       badge-up: "24 <span>et</span> 25"
-      badge-down: "Novembre<br/>2020"
-
-    - link: "/formations/Formation-Kubernetes-avancee.html"
-      img: "/images/formations/Kubernetes-avancee-blue.png"
-      title: "Formation Kubernetes avancée"
-      fulltitle: "Formation Ansible : 26 et 27 Novembre 2020 Paris"
-      short: "Formation Kubernetes avancée 2 jours"
-      badge-up: "26 <span>et</span> 27"
       badge-down: "Novembre<br/>2020"
 
 ---
