--- a/index.html
+++ b/index.html
@@ -162,8 +162,29 @@ jobs_url:
                     </div>
                 </div>
             </div>
+          <div class="row">
+                <div class="col-sm-12 col-lg-6">
+                    <div class="techtrends">
+                        <div class="techtrends-image">
+                            <a id="tt-link-conteneurs" href="//info.wescale.fr/cloudradar-finops" title="Cloud Radar FinOps" target="_blank"><img src="{{"/images/cover-finops.png"|
+                                relative_url }}" alt="CloudRadar FinOps" /></a>
+                        </div>
+                        <div class="techtrends-text">
+                            <h2>CloudRadar FinOps</h2>
+                            <p>
+                               La connaissance fine des modèles de facturation des fournisseurs et des possibilités
+                                offertes par l’automatisation permet d’optimiser la consommation de ressources Cloud.
+                                <br/>
+                                Mais alors, comment maîtriser et optimiser ses coûts d’infrastructure dans le Cloud  ?
+                            </p>
+                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/cloudradar-finops" title="Télécharger le CloudRadar FinOps" target="_blank">Télécharger</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
+                <div class="col-sm-12 col-lg-6">
                     <div class="techtrends">
                         <div class="techtrends-image">
                             <a id="tt-link-conteneurs" href="//info.wescale.fr/cloudradar-finops" title="Cloud Radar FinOps" target="_blank"><img src="{{"/images/cover-finops.png"|
