--- a/index.html
+++ b/index.html
@@ -250,6 +250,52 @@ jobs_url:
                 </div>
             </div>
         </div>
+        <div class="row">
+                <div class="col-sm-12 col-lg-6">
+                    <div class="techtrends">
+                        <div class="techtrends-image">
+                            <a id="tt-link-conteneurs" href="//info.wescale.fr/techtrends-conteneurs" title="CloudRadar Conteneurs" target="_blank"><img src="{{"/images/couverture-tt-conteneurs-3.png"|
+                                relative_url }}" alt="Techtrends Conteneurs" /></a>
+                        </div>
+                        <div class="techtrends-text">
+                            <h2>Conteneurs</h2>
+                            <p>
+                                Dans ce document, nous vous partageons notre vision des conteneurs. La première partie
+                                <b>Projeter</b> propose d’identifier différents cas d’usage des conteneurs. Par la
+                                suite, la partie <b>Implémenter</b> vous invite à construire une plateforme
+                                conteneurisée avec les bons outils. Pour finir, le chapitre <b>Exploiter</b> vous aide à
+                                faire vivre la plateforme conteneurisée.
+                            </p>
+                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/techtrends-conteneurs" title="Télécharger le CloudRadar Conteneurs" target="_blank">Télécharger</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-lg-6">
+                    <div class="techtrends">
+                        <div class="techtrends-image">
+                            <a id="tt-link-cloud" href="//info.wescale.fr/techtrends-cloud" title="Techtrends Cloud" target="_blank"><img src="{{"/images/techtrends-cloud-3.png"|
+                                relative_url }}" alt="Techtrends Cloud" /></a>
+                        </div>
+                        <div class="techtrends-text">
+                            <h2>Cloud</h2>
+                            <p>Dans le paysage IT actuel, le Cloud Computing est omniprésent. Cependant, même si son
+                                adoption
+                                progresse au sein des entreprises, la migration de tout ou partie d’un parc applicatif
+                                reste
+                                bien
+                                souvent complexe. Les acteurs de cet écosystème sont de plus en plus nombreux et les
+                                offres se
+                                multiplient en conséquence. Les décideurs sont confrontés à des choix stratégiques et
+                                technologiques
+                                difficiles.</p>
+                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/techtrends-cloud" title="Télécharger le Techtrends Cloud" target="_blank">Télécharger</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="home-profils">
