Add Cloud Native Cloud Radar

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ jobs_url:
     <div class="container">
         <div class="row">
             <div class="col-md-12 home-content">
-                <h1 class="title">Experts Cloud et DevOps</h1>
+                <h1 class="title">L'excellence Cloud sur mesure !</h1>
                 <h2 class="home-text">
-                    Nos experts vous aident à innover avec le Cloud et la culture DevOps.
+                    WeScale vous aide à penser, construire et maîtriser vos infrastructures Cloud.
                 </h2>
 
             </div>
@@ -182,28 +182,27 @@ jobs_url:
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 col-lg-6">
+              <div class="col-sm-12 col-lg-6">
                     <div class="techtrends">
                         <div class="techtrends-image">
                             <a id="tt-link-conteneurs" href="//info.wescale.fr/cloudradar-finops" title="Cloud Radar FinOps" target="_blank"><img src="{{"/images/cover-finops.png"|
-                                relative_url }}" alt="CloudRadar FinOps" /></a>
+                                relative_url }}" alt="CloudRadar CloudNative" /></a>
                         </div>
                         <div class="techtrends-text">
-                            <h2>CloudRadar FinOps</h2>
+                            <h2>CloudRadar CloudNative</h2>
                             <p>
-                               La connaissance fine des modèles de facturation des fournisseurs et des possibilités
-                                offertes par l’automatisation permet d’optimiser la consommation de ressources Cloud.
+                               Texte .....detoinzifn eibzgnntintninnyinhitninhitynhity !
+                                froiitghihrightirhrigh iufh uifnr oojj,, pk,tgiuin ,!
                                 <br/>
-                                Mais alors, comment maîtriser et optimiser ses coûts d’infrastructure dans le Cloud  ?
+                                Mais alors, comment adopter le cloud Native  ?
                             </p>
-                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/cloudradar-finops" title="Télécharger le CloudRadar FinOps" target="_blank">Télécharger</a>
+                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/cloudradar-finops" title="Télécharger le CloudRadar CloudNative" target="_blank">Télécharger</a>
                             </p>
                         </div>
                     </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-sm-12 col-lg-6">
                     <div class="techtrends">
@@ -250,52 +249,7 @@ jobs_url:
                 </div>
             </div>
         </div>
-        <div class="row">
-                <div class="col-sm-12 col-lg-6">
-                    <div class="techtrends">
-                        <div class="techtrends-image">
-                            <a id="tt-link-conteneurs" href="//info.wescale.fr/techtrends-conteneurs" title="CloudRadar Conteneurs" target="_blank"><img src="{{"/images/couverture-tt-conteneurs-3.png"|
-                                relative_url }}" alt="Techtrends Conteneurs" /></a>
-                        </div>
-                        <div class="techtrends-text">
-                            <h2>Conteneurs</h2>
-                            <p>
-                                Dans ce document, nous vous partageons notre vision des conteneurs. La première partie
-                                <b>Projeter</b> propose d’identifier différents cas d’usage des conteneurs. Par la
-                                suite, la partie <b>Implémenter</b> vous invite à construire une plateforme
-                                conteneurisée avec les bons outils. Pour finir, le chapitre <b>Exploiter</b> vous aide à
-                                faire vivre la plateforme conteneurisée.
-                            </p>
-                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/techtrends-conteneurs" title="Télécharger le CloudRadar Conteneurs" target="_blank">Télécharger</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-lg-6">
-                    <div class="techtrends">
-                        <div class="techtrends-image">
-                            <a id="tt-link-cloud" href="//info.wescale.fr/techtrends-cloud" title="Techtrends Cloud" target="_blank"><img src="{{"/images/techtrends-cloud-3.png"|
-                                relative_url }}" alt="Techtrends Cloud" /></a>
-                        </div>
-                        <div class="techtrends-text">
-                            <h2>Cloud</h2>
-                            <p>Dans le paysage IT actuel, le Cloud Computing est omniprésent. Cependant, même si son
-                                adoption
-                                progresse au sein des entreprises, la migration de tout ou partie d’un parc applicatif
-                                reste
-                                bien
-                                souvent complexe. Les acteurs de cet écosystème sont de plus en plus nombreux et les
-                                offres se
-                                multiplient en conséquence. Les décideurs sont confrontés à des choix stratégiques et
-                                technologiques
-                                difficiles.</p>
-                            <p class="news-readmore"><a class="job-button button-sm" href="//info.wescale.fr/techtrends-cloud" title="Télécharger le Techtrends Cloud" target="_blank">Télécharger</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
     </section>
 
     <section class="home-profils">
