--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ jobs_url:
             <div class="col-md-12 home-content">
                 <h1 class="title">L'excellence Cloud sur mesure !</h1>
                 <h2 class="home-text">
-                    WeScale vous aide à penser, construire et maîtriser vos infrastructures Cloud.
+                    WeScale vous aide à penser, construire, développer et maîtriser vos infrastructures Cloud.
                 </h2>
 
             </div>
