drop second layer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ jobs_url:
         </div>
     </div>
 </section>
-<section title="metier" class="home-metier bg-gray">
+<!--<section title="metier" class="home-metier bg-gray">
      <div class="container">
         <div class="row">
             <div class="col-md-4">
@@ -34,10 +34,10 @@ jobs_url:
                     et vous accompagnons pour projeter les prochaines évolutions de votre système d’information.<br>
                     Nos experts interviennent en Automatisation, Cloud, Conteneurs, BigData, Observabilité, Sécurité, ...
 
-                    <!--
+                    &lt;!&ndash;
                     Le <b>continuous delivery</b> n'est pas réservé aux <b>GAFA</b>, tout le monde peut l'atteindre !
                     C'est pourquoi nous travaillons à <b>supprimer</b> les <b>contraintes</b> entre les <b>développements</b>
-                    et la <b>livraison de valeur</b> à vos utilisateurs.-->
+                    et la <b>livraison de valeur</b> à vos utilisateurs.&ndash;&gt;
                 </p>
             </div>
             <div class="col-md-4">
@@ -47,10 +47,10 @@ jobs_url:
                     Nous vous aidons à concrétiser vos projets dans une approche DevOps, grâce à la participation de nos
                     experts collaborant au quotidien avec vous. Nous développons des plateformes Cloud Native adaptées et résilientes du
                     développement à la production.
-                    <!--Nous construisons les solutions avec et pour nos clients. Notre objectif est de <b>collaborer</b>,
+                    &lt;!&ndash;Nous construisons les solutions avec et pour nos clients. Notre objectif est de <b>collaborer</b>,
                     c’est
                     pourquoi nous travaillons à nourrir la culture <b>DevOps</b>.<br>
-                    Nous sommes les <b>Ops</b> de <b>DevOps</b>-->
+                    Nous sommes les <b>Ops</b> de <b>DevOps</b>&ndash;&gt;
                 </p>
             </div>
             <div class="col-md-4">
@@ -61,15 +61,15 @@ jobs_url:
                     Notre catalogue de formations est là pour faire monter en compétences vos équipes. Nous produisons des
                     plans de formation issus de nos expériences de terrain et sommes à même de les adapter à votre
                     contexte.
-                    <!--Nos consultants sont <b>certifiés</b> sur les plateformes <b>Cloud public</b> (AWS, Google, Azure)
+                    &lt;!&ndash;Nos consultants sont <b>certifiés</b> sur les plateformes <b>Cloud public</b> (AWS, Google, Azure)
                     et
-                    <b>Cloud privé</b> (OpenStack). Wescale investit en continu dans la formation des scalers.-->
+                    <b>Cloud privé</b> (OpenStack). Wescale investit en continu dans la formation des scalers.&ndash;&gt;
                 </p>
             </div>
 
         </div>
      </div>
-</section>
+</section>-->
 
 
     <!-- Bloc Offres  -->
