Tune first layer size

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ jobs_url:
         <div class="container-fluid bg-light content portfolio-container" id="offres">
             <div class="row padding-btm">
                  <div class="col-lg-12 text-center">
-            <h2 class="section-heading ">Nos expertises</h2>
+            <h2 class="section-heading ">Nos réponses à vos besoins</h2>
                 </div>
             </div>
 
