Tune first layer size

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: WeScale - Expert Cloud et DevOps
+title: WeScale - L'excellence Cloud sur mesure !
 class: home
 meta_desc: |
-  WeScale vous aide à innover avec le Cloud et la culture DevOps. Conseil, Réalisation et Formation
+  WeScale vous aide à penser, construire, et maîtriser vos infrastructures Cloud. Conseil, Réalisation et Formation
 jobs_url:
   designer: https://www.welcometothejungle.co/companies/wescale/jobs/cloud-designer_paris_WESCA_780wXyk
   builder: https://www.welcometothejungle.co/companies/wescale/jobs/cloud-builder_paris
@@ -15,7 +15,7 @@ jobs_url:
             <div class="col-md-12 home-content">
                 <h1 class="title">L'excellence Cloud sur mesure !</h1>
                 <h2 class="home-text">
-                    WeScale vous aide à penser, construire, développer et maîtriser vos infrastructures Cloud.
+                    Nos équipes vous aident à penser, construire, et maîtriser vos infrastructures Cloud.
                 </h2>
 
             </div>
